KUBE/Ingress-controller/ingress-controller/apps-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2-backend
  template:
    metadata:
      labels:
        app: app2-backend
    spec:
      containers:
        - name: backend
          image: docker.io/achalpadol/employee-backend:v1
          ports:
            - containerPort: 5000
