KUBE/Ingress-controller/ingress-controller/apps.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1-frontend
  template:
    metadata:
      labels:
        app: app1-frontend
    spec:
      containers:
      - name: app1-frontend
        image: docker.io/achalpadol/employee-frontend:v2
        ports:
        - containerPort: 80
