KUBE/Ingress-controller/ingress-controller/service-2.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: app2-backend-service
spec:
  type: ClusterIP
  selector:
    app: app2-backend
  ports:
    - port: 5000
      targetPort: 5000
