KUBE/Ingress-controller/ingress-controller/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-frontend-service
spec:
  type: ClusterIP
  selector:
    app: app1-frontend
  ports:
    - port: 80
      targetPort: 80
