KUBE/Ingress-controller/ingress-controller/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: employee-ingress
spec:
  ingressClassName: nginx

  rules:
  - host: employee.local
    http:
      paths:

        - path: /
          pathType: Prefix
          backend:
            service:
             name: app1-frontend-service
             port:
              number: 80

        - path: /api
          pathType: Prefix
          backend:
            service:
              name: app2-backend-service
              port:
                number: 5000
